# rp-pico-l-chika

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs  shift_register.pio
